# MODULAR-RAG-MCP-SERVER

./: .gitignore  DEV_SPEC.md  main.py  pyproject.toml
cache/captions/: .gitkeep
cache/embeddings/: .gitkeep
cache/processing/: .gitkeep
config/: settings.yaml
config/prompts/: chunk_refinement.txt  image_captioning.txt  rerank.txt
data/db/: .gitkeep
data/documents/: .gitkeep
data/images/: .gitkeep
logs/: .gitkeep
scripts/: .gitkeep  ingest.py  query.py
src/: __init__.py
src/core/: __init__.py  settings.py  types.py
src/core/query_engine/: __init__.py  hybrid_search.py  reranker.py
src/core/response/: __init__.py  response_builder.py
src/core/trace/: __init__.py
src/ingestion/: __init__.py  document_manager.py  pipeline.py
src/ingestion/chunking/: __init__.py  document_chunker.py
src/ingestion/embedding/: __init__.py
src/ingestion/storage/: __init__.py  bm25_indexer.py  image_storage.py  vector_upserter.py
src/ingestion/transform/: __init__.py  image_captioner.py  metadata_enricher.py
src/libs/: __init__.py
src/libs/embedding/: __init__.py  azure_embedding.py  base_embedding.py  (+2 more)
src/mcp_server/: __init__.py  protocol_handler.py  server.py
src/observability/: __init__.py  logger.py
tests/: __init__.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_mcp_server.py
tests/unit/: test_config_loading.py  test_custom_evaluator.py  test_embedding_factory.py  test_llm_factory.py  test_reranker_factory.py  test_response_builder.py  test_smoke_imports.py  test_splitter_factory.py  test_vector_store_contract.py
(+37 files in other folders)
